--- a/about.html
+++ b/about.html
@@ -99,8 +99,8 @@
 
             <div class="box">
                 <h3>Follow US</h3>
-                <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-                <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
+                <a href="https://www.facebook.com/gemsmym"> <i class="fab fa-facebook-f"></i> facebook </a>
+                <a href="https://instagram.com/gemsmylavaram?igshid=YmMyMTA2M2Y="> <i class="fab fa-instagram"></i> instagram </a>
             </div>
 
         </div>
